# MyProjector

./: CMakeLists.txt
jni/: Android.mk  Application.mk  AstraData.cpp  AstraData.h  inTheAirGesture.h  logOut.h  main.cpp  projectorCamera.cpp  projectorCamera.h  touchInfo.cpp  touchInfo.h
stateModel/: role.cpp  role.h
